# clearconf

./: .gitignore  README.md  cli_README.md  pyproject.toml
clearconf/: base_config.py
clearconf/api/: meta.py  node.py  tree_functions.py
clearconf/api/_utils/: misc.py
clearconf/assets/: example_conf.py
clearconf/cli/: defaults.py  main.py
clearconf/cli/utils/: file.py
clearconf/utils/: conf.py  stdout.py
docker/: Dockerfile  build.sh  start.sh
examples/project1/: main.py
examples/project1/configs/: __init__.py  config.py
examples/project1/datasets/: imagenet.py
examples/project1/models/: mlp.py
examples/project2/: main.py
examples/project2/configs/: __init__.py  config.py
examples/project2/datasets/: imagenet.py
examples/project2/models/: mlp.py
tests/project1/: dataset.py  main.py  method.py
tests/project1/configs/: common_config.py  data_config.py  main_config.py
tests/test2/: config.py  model.py
tests/test3/: config.py
