[tool.poetry]
name = "confort"
version = "0.1.0"
description = ""
authors = ["andrearosasco <andrea.rosasco@iit.it>"]
readme = "README.md"

[tool.poetry.scripts]
confort = "confort.cli.main:main"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
